--- a/app/blog/views/admin.html
+++ b/app/blog/views/admin.html
@@ -1,21 +1,14 @@
 {% extends './layouts/main.html' %}
 
 {% block content %}
-<h1>欢迎</h1>
-<form action="" method="POST">
-        {% if err %}
-        {{ signal }}
-        {% endif %}
-        <div class="form-group">
-            <label for="username">用户名</label>
-            <input type="text" class="form-control" id="username" placeholder="username" name="user">
+<div class="container">
+    <div class="jumbotron">
+        <h1 class="text-left">管理员仪表盘<small><a href="/admin/{{username}}">{{ username }}</a>，欢迎你</small></h1>
+        <p class="text-muted text-left">在这里，你可以添加一个新的管理员或修改现有管理员的信息，当然，你也可以删除其他管理员</p>
+        <div class="row">
+            <a href="/admin/add" class="col-md-3 col-sm-3 btn btn-primary btn-lg">添加管理员</a>
+            <a href="/admin/list" class="col-md-3 col-sm-3 col-md-offset-1 col-sm-offset-1 btn btn-primary btn-lg">修改管理员信息</a>
         </div>
-        <div class="form-group">
-            <input type="radio" value="true" name="through">同意通过审核
-            <input type="radio" value="false" name="through">不同意通过审核
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-default" value="提交">
-        </div>
-</form>
+    </div>
+</div>
 {% endblock %}
