--- a/app/blog/views/admin_login.html
+++ b/app/blog/views/admin_login.html
@@ -1,22 +1,28 @@
 {% extends './layouts/main.html' %}
 
+{% block head %}
+<link rel="stylesheet/less" type="text/css" href="/styles/admin_login.less">
+{% endblock %}
+
 {% block content %}
-<div>
-    <form action="" method="POST">
-        {% if err %}
-        {{ signal }}
-        {% endif %}
-        <div class="form-group">
-            <label for="username">用户名</label>
-            <input type="text" class="form-control" id="username" placeholder="username" name="user">
-        </div>
-        <div class="form-group">
-            <label for="password">密码</label>
-            <input type="text" class="form-control" id="password" placeholder="password" name="pwd">
-        </div>
-        <div class="form-group">
-            <input type="submit" class="btn btn-default" value="登录">
-        </div>
-    </form>
+<div id="login-div">
+    <div id="login">
+        <form action="" method="POST" class="container">
+            {% if err %}
+            {{ signal }}
+            {% endif %}
+            <div class="form-group">
+                <label for="username">用户名</label>
+                <input type="text" class="form-control input-lg" id="username" placeholder="username" name="user">
+            </div>
+            <div class="form-group">
+                <label for="password">密码</label>
+                <input type="password" class="form-control input-lg" id="password" placeholder="password" name="pwd">
+            </div>
+            <div class="form-group">
+                <input type="submit" class="btn btn-primary btn-lg btn-block" value="登录">
+            </div>
+        </form>
+    </div>
 </div>
 {% endblock %}
