--- a/app/blog/views/layouts/main.html
+++ b/app/blog/views/layouts/main.html
@@ -5,6 +5,7 @@
     <!-- 考虑移动设备 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
+    <link rel="stylesheet" type="text/css" href="/styles/index.css">
     <!-- 引入Bootstrap核心样式文件 -->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
     {% block head %}
@@ -18,5 +19,6 @@
     <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <!-- Bootstrap 核心 JavaScript 文件 -->
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/javascript/uploadList.js"></script>
 </body>
 </html>
