--- a/app/blog/views/upload.html
+++ b/app/blog/views/upload.html
@@ -1,9 +1,13 @@
 {% extends './layouts/main.html' %}
 {% block content %}
 <form enctype="multipart/form-data" method="post" action="">
-	<input type="file" name="filepath">
-	<button type="submit">上传</button>
+	<input type="file" name="filepath" multiple="mutiple" id="file">
+	<button type="submit" id="upBtn">上传</button>
 </form>
+<div class="upload">
+	<ul class="uplist">		
+	</ul>
+</div>
 <div class="showPic">
 	{% autoescape false %}
     {{ img }}
@@ -14,4 +18,5 @@
     {{ download }}
     {% endautoescape %}
 </div>
+
 {% endblock %}
