--- a/app/blog/views/layouts/main.html
+++ b/app/blog/views/layouts/main.html
@@ -7,13 +7,15 @@
     <title>{{ title }}</title>
     <!-- 引入Bootstrap核心样式文件 -->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+     <!-- jQuery文件, 务必在bootstrap.min.js 之前引入 -->
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Bootstrap 核心 JavaScript 文件 -->
+    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script scr="/js/informAudit.js"></script>
 </head>
 <body>
     {% block content %}
     {% endblock %}
-    <!-- jQuery文件, 务必在bootstrap.min.js 之前引入 -->
-    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Bootstrap 核心 JavaScript 文件 -->
-    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
 </body>
 </html>
