--- a/app/blog/views/404.html
+++ b/app/blog/views/404.html
@@ -1,6 +1,5 @@
 {% extends './layouts/main.html' %}
 
 {% block content %}
-<script src="/scripts/index.js"></script>
-<h2>操作成功</h2>
+<h1>404 - 找不到页面</h1>
 {% endblock %}
