--- a/app/blog/views/500.html
+++ b/app/blog/views/500.html
@@ -1,6 +1,5 @@
 {% extends './layouts/main.html' %}
 
 {% block content %}
-<script src="/scripts/index.js"></script>
-<h2>操作成功</h2>
+<h1>500 - 服务器出错</h1>
 {% endblock %}
