--- a/app/blog/views/layouts/main.html
+++ b/app/blog/views/layouts/main.html
@@ -7,6 +7,7 @@
     <title>{{ title }}</title>
     <!-- 引入Bootstrap核心样式文件 -->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- 在下面看情况引用静态文件 -->
     {% block head %}
     {% endblock %}
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.1/less.min.js"></script>
