新建文章，附件上传，发布存储

--- a/app/blog/views/upload.html
+++ b/app/blog/views/upload.html
@@ -1,8 +1,8 @@
 {% extends './layouts/main.html' %}
 {% block content %}
 <form enctype="multipart/form-data" method="post" action="">
-	<input type="file" name="filepath" multiple="mutiple" id="file">
-	<button type="submit" id="upBtn">上传</button>
+	<input type="file" name="filepath" id="file">
+	<input type="submit" value="上传"/>
 </form>
 <div class="upload">
 	<ul class="uplist">		
