--- a/app/blog/views/layouts/main.html
+++ b/app/blog/views/layouts/main.html
@@ -19,6 +19,6 @@
     <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <!-- Bootstrap 核心 JavaScript 文件 -->
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/javascript/uploadList.js"></script>
+    <script type="text/javascript" src="/javascript/article_new.js"></script>
 </body>
 </html>
